--- a/thumbnail-generator-ui/src/scss/index.scss
+++ b/thumbnail-generator-ui/src/scss/index.scss
@@ -1,1 +1,12 @@
 @import "../App.scss";
+
+// layouts
+@import "../layout/Layout.scss";
+
+// components
+@import "../components/Form/Form.scss";
+@import "../components/Header/Header.scss";
+@import "../components/Footer/Footer.scss";
+@import "../components/Login/Login.scss";
+@import "../components/Register/Register.scss";
+@import "../components/Home/Home.scss";
